--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,32 @@
-# Dependency directories
+# Archivos generados por Node.js
 node_modules/
 
-# Debug log from npm
-npm-debug.log
-package-lock.json
+# Archivos de log y temporales
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.pid
+*.seed
+*.pid.lock
 
-# Environment Variables should NEVER be published
+# Archivos de configuración
 .env
+.env.*
 
-# macOS
+# Archivos de sistema
 .DS_Store
-.AppleDouble
-.LSOverride
-
-# Windows
 Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-*.lnk
 
+# Archivos de IDE
+.idea/
+.vscode/
+*.iml
 
-# VS Code
-.vscode/*
+# Archivos de construcción
+dist/
+build/
+out/
+public/
+coverage/
