--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "irontruck-server",
-  "version": "0.1.0",
-  "private": true,
+  "name": "tecnobolsa-server",
+  "version": "1.0.0",
+  "description": "Backend del proyecto tecnobolsa",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
+  "keywords": [
+    "Node.js",
+    "Express",
+    "MongoDB"
+  ],
+  "author": "Frank Gimeno",
   "dependencies": {
-    "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
-    "cloudinary": "^1.35.0",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.1.0",
-    "mongoose": "^7.0.0",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0",
-    "react-router-dom": "^6.9.0",
-    "talkjs": "^0.15.6"
+    "mongoose": "^7.0.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.22"
   }
 }
